# vicode

./: .gitignore  .rustfmt.toml  AGENTS.md  Cargo.toml  README.md  TODO.md  config.toml  flake.nix  garnix.yaml  justfile
.github/workflows/: release.yml
default/: AGENTS.md  config.toml  keymap.toml
src/: bwrap.rs  cli.rs  config.rs  deps.rs  git.rs  id.rs  macros.rs  main.rs  utils.rs
src/agent/: compact.rs  core.rs  handle.rs  id.rs  init.rs  loop_tests.rs  mod.rs  router.rs  run.rs  task.rs  turn.rs
src/agent/replica/: mod.rs
src/agent/router/: handle.rs  mod.rs  spawn.rs
src/agent/subagent/: candidate.rs  mod.rs  replica.rs  result.rs
src/agent/task/: executor.rs  handle.rs  ledger.rs  manager.rs  mod.rs  sink.rs
src/agent/tool/: context.rs  generic.rs  mod.rs  registry.rs  traits.rs
src/llm/: delta.rs  history.rs  message.rs  mod.rs  tokens.rs
src/llm/api/: assistant.rs  compat.rs  delta.rs  mod.rs  request.rs
src/llm/api/backend/: mod.rs  responses.rs
src/llm/api/backend/chat_completions/: convert.rs  mod.rs  request.rs  stream.rs
src/llm/api/message/: mod.rs
src/llm/history/: archive.rs  compact.rs  delta.rs  event.rs  instructions.rs  mod.rs  response.rs  state.rs  subagent.rs  timing.rs  tokens.rs
src/llm/history/message/: developer.rs  mod.rs  user.rs
src/llm/history/message/assistant/: mod.rs  output.rs  reasoning.rs  toolcall.rs
src/llm/provider/: assistant.rs  compat.rs  event.rs  mod.rs  request.rs
src/llm/provider/api/: fake.rs  mod.rs  responses.rs
src/llm/provider/api/chat_completions/: convert.rs  mod.rs  request.rs  stream.rs
src/llm/provider/api/chatgpt/: auth.rs  cli.rs  error.rs  mod.rs  stream.rs  test_support.rs  tokens.rs
src/llm/provider/api/responses/: delta.rs  message.rs  mod.rs  output.rs  reasoning.rs  toolcall.rs
src/llm/provider/message/: mod.rs  output.rs  reasoning.rs  toolcall.rs
src/project/: README.md  agent.rs  app.rs  cleanup.rs  git.rs  instructions.rs  layout.rs  lock.rs  mod.rs  overlay.rs  state.rs
src/project/backend/: copy.rs  cow.rs  mod.rs
src/project/backend/overlay/: agent.rs  layout.rs  mod.rs  shared.rs
src/sandbox/: bwrap.rs  mod.rs  sbe.rs
src/tools/: edit.rs  mod.rs  subagent.rs  todo.rs
src/tools/bash/: mod.rs  task.rs  widget.rs
src/tui/: colors.rs  command.rs  mod.rs  osc7.rs  textarea.rs
src/tui/app/: command.rs  handle.rs  key.rs  keys.rs  mod.rs  render.rs  render_tests.rs  run.rs  tabs.rs
src/tui/command/: chord.rs  keymap.rs  mod.rs  name.rs
src/tui/tab/: input.rs  keys.rs  mod.rs  scroll.rs  update.rs
src/tui/textarea/: completion.rs  keys.rs  mod.rs  render.rs
src/tui/widgets/: app.rs  cmdline.rs  info.rs  logo.rs  markdown.rs  mod.rs  paragraph.rs  statusline.rs  syntax.rs  tablist.rs
src/tui/widgets/app/: layout.rs  mod.rs  render.rs  stl.rs
src/tui/widgets/container/: collapsible_sections.rs  composite.rs  element.rs  empty.rs  mod.rs  sections.rs
src/tui/widgets/container/scroll/: mod.rs  move.rs  render.rs
src/tui/widgets/input/: completion.rs  keys.rs  mod.rs  render.rs
src/tui/widgets/message/: developer.rs  mod.rs  output.rs  reasoning.rs  toolcall.rs  user.rs
src/tui/widgets/tab/: input.rs  mod.rs
todo/: backlog.md  maybe.md  wip_batch.md  wip_memory.md  wip_multiagent.md  wip_phase4.md  wip_ssh.md
