[package]
name = "vicode"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "vc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1"
base64 = "0.22.1"
crossterm = { version = "0.28.0", features = ["event-stream"] }
futures = "0.3.31"
git2 = "0.20.2"
indexmap = { version = "2.6.0", features = ["serde"] }
pulldown-cmark = "0.13.0"
ratatui = { version = "0.29.0", features = ["all-widgets", "unstable-rendered-line-info", "unstable-widget-ref"] }
reqwest-eventsource = "0.6.0"
serde = "1.0.228"
serde_json = "1.0.145"
shellexpand = "3.1.1"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tui-textarea = "0.7.0"
uuid = { version = "1.18.1", features = ["v4", "v5", "serde"] }
xdg = "3.0.0"
tokio-stream = { version = "0.1.17", features = ["fs"] }
tui-markdown = "0.3.6"
self_cell = "1.2.1"
lazy_static = "1.5.0"
strum = { version = "0.27.2", features = ["derive"] }
typetag = "0.2"
dyn-clone = "1.0.20"
schemars = "1.1.0"
inventory = "0.3.21"
derive_more = { version = "2.0.1", features = ["from", "into"] }
thiserror = "2.0.17"
syntect = "5.3.0"
ansi-to-tui = "7.0.0"
notify = "8.2.0"
colored-diff = "0.2.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
tracing-appender = "0.2.4"
dirs = "5.0"
libgit2-sys = "0.18.3"
fs_extra = "1.3.0"
backon = "1.6.0"
governor = "0.10.4"
async-openai = { version = "0.33.0", features = ["byot", "responses", "chat-completion"] }
ignore = "0.4.25"
similar = "2.7.0"
smart-default = "0.7.1"
petname = "2.0.2"
proc-mounts = "0.3.0"
tiktoken-rs = { version = "0.9.1", features = [] }

[lints.clippy]
redundant_clone = "warn"

[patch.crates-io]
async-openai = { git = "https://github.com/anuramat/async-openai" }
