[package]
name = "vicode"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "vc"
path = "src/main.rs"

[dependencies]
ambassador = "0.5.0"
ansi-to-tui = "7.0.0"
anyhow = "1.0.100"
async-openai = { version = "0.33.0", features = [
  "byot",
  "chat-completion",
  "responses"
] }
async-trait = "0.1"
backon = "1.6.0"
base64 = "0.22.1"
colored-diff = "0.2.3"
crossterm = { version = "0.28.0", features = ["event-stream"] }
derive_more = { version = "2.0.1", features = ["full"] }
dirs = "5.0"
dyn-clone = "1.0.20"
fs_extra = "1.3.0"
futures = "0.3.31"
git2 = "0.20.2"
governor = "0.10.4"
ignore = "0.4.25"
indexmap = { version = "2.6.0", features = ["serde"] }
inventory = "0.3.21"
lazy_static = "1.5.0"
libgit2-sys = "0.18.3"
notify = "8.2.0"
nucleo-matcher = "0.3.1"
petname = "2.0.2"
proc-mounts = "0.3.0"
pulldown-cmark = "0.13.0"
ratatui = { version = "0.29.0", features = [
  "all-widgets",
  "unstable-rendered-line-info",
  "unstable-widget-ref"
] }
reqwest-eventsource = "0.6.0"
schemars = "1.1.0"
self_cell = "1.2.1"
serde = "1.0.228"
serde_json = "1.0.145"
serde_plain = "1.0.2"
shellexpand = "3.1.1"
similar = "2.7.0"
smart-default = "0.7.1"
strum = { version = "0.27.2", features = ["derive"] }
syntect = "5.3.0"
thiserror = "2.0.17"
tiktoken-rs = { version = "0.9.1", features = [] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["fs"] }
toml = "0.9.8"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
tui-markdown = "0.3.6"
tui-textarea = "0.7.0"
typetag = "0.2"
uuid = { version = "1.18.1", features = ["serde", "v4", "v5"] }
xdg = "3.0.0"

[lints.clippy]
redundant_clone = "warn"

[patch.crates-io]
async-openai = { git = "https://github.com/anuramat/async-openai" }
